--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@types/cors": "^2.8.17",
     "cors": "^2.8.5",
     "graphql": "^16.11.0",
+    "graphql-playground-middleware-express": "^1.7.23",
     "graphql-tag": "^2.12.6",
     "next": "14.2.3",
     "node-fetch": "^3.3.2",
