--- a/package.json
+++ b/package.json
@@ -14,7 +14,9 @@
     "@as-integrations/next": "^4.0.0",
     "@emotion/react": "^11.11.4",
     "@emotion/styled": "^11.11.5",
+    "@mui/icons-material": "^5.18.0",
     "@mui/material": "^5.15.15",
+    "@reduxjs/toolkit": "^2.8.2",
     "@types/cors": "^2.8.17",
     "cors": "^2.8.5",
     "graphql": "^16.11.0",
@@ -23,7 +25,8 @@
     "next": "14.2.3",
     "node-fetch": "^3.3.2",
     "react": "^18",
-    "react-dom": "^18"
+    "react-dom": "^18",
+    "react-redux": "^9.2.0"
   },
   "devDependencies": {
     "@types/node": "^20",
