--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "graphql-tag": "^2.12.6",
     "next": "14.2.3",
     "node-fetch": "^3.3.2",
+    "openai": "^5.16.0",
     "react": "^18",
     "react-dom": "^18",
     "react-redux": "^9.2.0"
