--- a/.gitignore
+++ b/.gitignore
@@ -2,6 +2,9 @@
 
 # Node.js / Next.js Frontend
 frontend/node_modules/
+node_modules/
+.next/
+frontend/.env.local
 frontend/.next/
 frontend/out/
 frontend/build/
